Revert "fixed name overflow"
This reverts commit 8197a6b697c4bf2039cb1b0a92e5ec6dced2d741.

--- a/src/components/MaterialCard/MaterialCard.css
+++ b/src/components/MaterialCard/MaterialCard.css
@@ -37,10 +37,6 @@
 .material-card__name {
   align-self: center;
   font-size: 20px;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  max-width: 250px;
 }
 
 .material-card__hmis-list {
